moved pictures to another row to fix uneven heights

--- a/exercises/css-ecommerce-page/style.css
+++ b/exercises/css-ecommerce-page/style.css
@@ -11,6 +11,7 @@
 }
 .col-fifth{
   width:20%;
+  padding:0 1rem;
 }
 .strike{
   text-decoration:line-through;
@@ -19,11 +20,17 @@
   color: lightgray;
 }
 img{
-  width:50%;
+  width:100%;
 }
 .jc-c{
   justify-content: center;
 }
 .txt-c{
   text-align: center;
+}
+p{
+  font-size: .7rem;
+}
+.h-100{
+  height: 100%;
 }
